--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -834,4 +834,10 @@
   <data name="Congratulations" xml:space="preserve">
     <value>Congratulations!</value>
   </data>
+  <data name="AvatarChangeSuccessfullyMsg" xml:space="preserve">
+    <value>Your avatar has been changed successfully.</value>
+  </data>
+  <data name="MyAvatars" xml:space="preserve">
+    <value>My Avatars</value>
+  </data>
 </root>
