MZ-201 update user avatar list

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -843,4 +843,7 @@
   <data name="Alert" xml:space="preserve">
     <value>Alert</value>
   </data>
+  <data name="BuyAvatar" xml:space="preserve">
+    <value>Buy Avatar</value>
+  </data>
 </root>
