--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -921,4 +921,16 @@
   <data name="RemoveFriendSuccessfullyMessage" xml:space="preserve">
     <value>This user has been removed successfully from your friends list.</value>
   </data>
+  <data name="EmptyMessageErrorMessage" xml:space="preserve">
+    <value>Please type your message.</value>
+  </data>
+  <data name="Message" xml:space="preserve">
+    <value>Message</value>
+  </data>
+  <data name="MessageSentSuccessfully" xml:space="preserve">
+    <value>Your message gas been sent successfully</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>Send</value>
+  </data>
 </root>
