MZ-227 add modal for setting autobid; add autobid api end points

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -846,4 +846,7 @@
   <data name="BuyAvatar" xml:space="preserve">
     <value>Buy Avatar</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
 </root>
