MZ-237 fix bid button direction in arabic

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -508,7 +508,7 @@
     <value>العودة</value>
   </data>
   <data name="Bid" xml:space="preserve">
-    <value>مزايدة</value>
+    <value>زيد</value>
   </data>
   <data name="BidHistory" xml:space="preserve">
     <value>مزايدات سابقة</value>
