MZ-196 Reply button and fix UI

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -858,4 +858,7 @@
   <data name="Send" xml:space="preserve">
     <value>إرسال</value>
   </data>
+  <data name="Reply" xml:space="preserve">
+    <value>الرد</value>
+  </data>
 </root>
