--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -934,12 +934,15 @@
     <value>Message</value>
   </data>
   <data name="MessageSentSuccessfully" xml:space="preserve">
-    <value>Your message gas been sent successfully</value>
+    <value>Your message has been sent successfully</value>
   </data>
   <data name="More" xml:space="preserve">
     <value>more...</value>
   </data>
   <data name="Send" xml:space="preserve">
     <value>Send</value>
+  </data>
+  <data name="Reply" xml:space="preserve">
+    <value>Reply</value>
   </data>
 </root>
