mz-253 show message when user bid twice in row

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -849,4 +849,7 @@
   <data name="Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="BidTwiceErrorMessage" xml:space="preserve">
+    <value>You cannot bid twice in a row</value>
+  </data>
 </root>
