--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -963,4 +963,7 @@
   <data name="MinuteAbbreviation" xml:space="preserve">
     <value>min</value>
   </data>
+  <data name="SubscriptionPurchaseAcknowledgementApi" xml:space="preserve">
+    <value>Congratulations, you have successfully purchased &lt;strong&gt;Basic&lt;/strong&gt; and we have updated your account. Also you win a prize from Zeedli.</value>
+  </data>
 </root>
