MZ-286 fixed retail price label

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -861,4 +861,7 @@
   <data name="Reply" xml:space="preserve">
     <value>الرد</value>
   </data>
+  <data name="RetailPriceLabel" xml:space="preserve">
+    <value>سعر السوق</value>
+  </data>
 </root>
