--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -978,4 +978,10 @@
   <data name="SearchFriend" xml:space="preserve">
     <value>Search Friend</value>
   </data>
+  <data name="MyFriends" xml:space="preserve">
+    <value>My Friends</value>
+  </data>
+  <data name="ZeedliUsers" xml:space="preserve">
+    <value>Zeedli Users</value>
+  </data>
 </root>
