MZ-316 Dashboard to My Page Rename.

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -403,7 +403,7 @@
     <value>Profile Page</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
-    <value>Dashboard</value>
+    <value>My Page</value>
   </data>
   <data name="ItemName" xml:space="preserve">
     <value>Item Name</value>
