MZ-317 click to edit on avatar inside dashborad page.

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -1032,4 +1032,7 @@
   <data name="ZeedliUsers" xml:space="preserve">
     <value>Zeedli Users</value>
   </data>
+  <data name="ClickToEdit" xml:space="preserve">
+    <value>Click to edit</value>
+  </data>
 </root>
