MZ-321 add max bid to auction display template.

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -1032,4 +1032,7 @@
   <data name="ZeedliUsers" xml:space="preserve">
     <value>Zeedli Users</value>
   </data>
+  <data name="AuctionBidLimite" xml:space="preserve">
+    <value>Auction Bid Limit: {MaximumBid}</value>
+  </data>
 </root>
