--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -1041,4 +1041,7 @@
   <data name="AuctionBuyNowWarnning" xml:space="preserve">
     <value>We're sorry, the buy now feature is only available to subscribers at the moment, it will be available to all users at {0}</value>
   </data>
+  <data name="BuyNowSearchPlaceholder" xml:space="preserve">
+    <value>Search product name or description...</value>
+  </data>
 </root>
