MZ-366 added buy now category filter

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -864,4 +864,10 @@
   <data name="RetailPriceLabel" xml:space="preserve">
     <value>سعر السوق</value>
   </data>
+  <data name="AllCategories" xml:space="preserve">
+    <value>All Categories</value>
+  </data>
+  <data name="NoBuyNowWarning" xml:space="preserve">
+    <value>There are currently no active buy now products available.</value>
+  </data>
 </root>
